--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Kara Ponder</a></h1>
 					<p>Graduate Student<br />
-					initial website testing</p>
+                    Department of Physics and Astronomy <br />
+					Univerisity of Pittsburgh</p>
 				</header>
 				<nav id="nav">
 					<ul>
@@ -37,7 +38,7 @@
 						<!-- <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li> -->
 						<!-- <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>-->
 						<li><a href="https://github.com/kponder" class="icon fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="kap146@pitt.edu" class="icon fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</footer>
 			</section>
