--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Kara Ponder</a></h1>
-					<p>Graduate Student<br />
+					<p>PhD Candidate<br />
                     Department of Physics and Astronomy <br />
 					Univerisity of Pittsburgh</p>
 				</header>
