--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						<!-- <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li> -->
 						<!-- <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>-->
 						<li><a href="https://github.com/kponder" class="icon fa-github"><span class="label">Github</span></a></li>
-						<li><a href="kap146@pitt.edu" class="icon fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="mailto:kap146@pitt.edu" class="icon fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</footer>
 			</section>
