--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>KP Website</title>
+		<title>Kara Ponder</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -37,8 +37,9 @@
 						<!-- <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>-->
 						<!-- <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li> -->
 						<!-- <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>-->
+                        <li><a href="mailto:kap146@pitt.edu" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						<li><a href="https://github.com/kponder" class="icon fa-github"><span class="label">Github</span></a></li>
-						<li><a href="mailto:kap146@pitt.edu" class="icon fa-envelope"><span class="label">Email</span></a></li>
+                        <li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 					</ul>
 				</footer>
 			</section>
@@ -57,7 +58,9 @@
 										<p>Website in development<br />
 										template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p>
 									</header>
-									<p>summary text</p>
+									<p>summary text<br />
+                                    <p><a href="Ponder_Kara_CV.pdf">CV</a></p>
+                                    </p>
 								</div>
 							</section>
 
