--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
 									<header class="major">
 										<h2>Kara Ponder</h2>
 										<p>Website in development<br />
-										template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p>
+										development.</p>
 									</header>
 									<p>summary text<br />
-                                    <p><a href="Ponder_Kara_CV.pdf">CV</a></p>
+                                    <p>Here is my <a href="Ponder_Kara_CV.pdf">CV</a></p>
                                     </p>
 								</div>
 							</section>
@@ -67,10 +67,10 @@
 						<!-- Two -->
 							<section id="two">
 								<div class="container">
-									<h3>Things I Can Do</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
+									<h3>Experience</h3>
+									<p>any experience summary text</p>
 									<ul class="feature-icons">
-										<li class="fa-code">Write all the code</li>
+                                        <li class="fa-code">Write all the code: Python, C++</li>
 										<li class="fa-cubes">Stack small boxes</li>
 										<li class="fa-book">Read books and stuff</li>
 										<li class="fa-coffee">Drink much coffee</li>
