added under construction

--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
 								<div class="container">
 									<header class="major">
 										<h2>Kara Ponder</h2>
-										<p>Website in development<br />
-										development.</p>
+										<p>WEBSITE UNDER <br />
+										 CONSTRUCTION</p>
 									</header>
 									<p>summary text<br />
-                                    <p>Here is my <a href="Ponder_Kara_CV.pdf">CV</a></p>
+                                    <p>Here is my <a href="Ponder_Kara_CV.pdf">CV</a>.</p>
                                     </p>
 								</div>
 							</section>
