--- a/index.html
+++ b/index.html
@@ -70,12 +70,15 @@
 									<h3>Experience</h3>
 									<p>any experience summary text</p>
 									<ul class="feature-icons">
-                                        <li class="fa-code">Write all the code: Python, C++</li>
-										<li class="fa-cubes">Stack small boxes</li>
-										<li class="fa-book">Read books and stuff</li>
-										<li class="fa-coffee">Drink much coffee</li>
-										<li class="fa-bolt">Lightning bolt</li>
-										<li class="fa-users">Shadow clone technique</li>
+                                        <li class="fa-graduation-cap"> PhD and Master's of Science in Physics:  University of Pittsburgh</li>
+                                        <li class="fa-graduation-cap"> Bachelor's of Science in Physics and Astronomy: University of Georgia</li>
+                                        <li class="fa-code"> Coding s: Python, C++</li>
+										<!-- <li class="fa-cubes">Stack small boxes</li>-->
+										<!-- <li class="fa-book">Read books and stuff</li>-->
+										<!-- <li class="fa-coffee">Drink much coffee</li>-->
+										<!-- <li class="fa-bolt">Lightning bolt</li>-->
+										<!-- <li class="fa-users">Shadow clone technique</li>-->
+                                        
 									</ul>
 								</div>
 							</section>
