Added LSST DESC logo

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 										<p>WEBSITE UNDER <br />
 										 CONSTRUCTION</p>
 									</header>
-									<p>summary text<br />
+									<p>summary text. Add Pitt, Pitt PACC, LSST, LSST DESC <br />
                                     <p>Here is my <a href="Ponder_Kara_CV.pdf">CV</a>.</p>
                                     </p>
 								</div>
@@ -72,7 +72,7 @@
 									<ul class="feature-icons">
                                         <li class="fa-graduation-cap"> PhD and Master's of Science in Physics:  University of Pittsburgh</li>
                                         <li class="fa-graduation-cap"> Bachelor's of Science in Physics and Astronomy: University of Georgia</li>
-                                        <li class="fa-code"> Coding s: Python, C++</li>
+                                        <li class="fa-code"> Coding: Python, C++, PyRAF/IRAF </li>
 										<!-- <li class="fa-cubes">Stack small boxes</li>-->
 										<!-- <li class="fa-book">Read books and stuff</li>-->
 										<!-- <li class="fa-coffee">Drink much coffee</li>-->
@@ -90,7 +90,7 @@
 									<p> summary of accomplishments.</p>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/LSST-DESC-logo.png" alt="" /></a>
 											<div class="inner">
 												<h4>Possibly broke spacetime</h4>
 												<p>explain picture.</p>
