commenting on LSST DESC

--- a/index.html
+++ b/index.html
@@ -92,8 +92,9 @@
 										<article>
 											<a href="#" class="image"><img src="images/LSST-DESC-logo.png" alt="" /></a>
 											<div class="inner">
-												<h4>Possibly broke spacetime</h4>
-												<p>explain picture.</p>
+												<h4>Member of the Large Synoptic Survey Telescope (LSST) Dark Energy Science Collaboration (DESC)</h4>
+												<p>Member of Supernova working group <br />
+                                                2015-2017: member of Collaboration Council</p>
 											</div>
 										</article>
 										<article>
