--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						<!-- <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>-->
                         <li><a href="mailto:kap146@pitt.edu" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						<li><a href="https://github.com/kponder" class="icon fa-github"><span class="label">Github</span></a></li>
-                        <li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+                        <li><a href="https://www.linkedin.com/in/kara-ponder-2635749b" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 					</ul>
 				</footer>
 			</section>
