easter island image testing

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
+					<span class="image avatar"><img src="images/2016-08-11 21.15.38.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Kara Ponder</a></h1>
 					<p>PhD Candidate<br />
                     Department of Physics and Astronomy <br />
@@ -92,7 +92,7 @@
 									<p> summary of accomplishments.</p>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/LSST-DESC-logo.png" alt="" /></a>
+											<a href="http://www.lsst-desc.org/" class="image"><img src="images/LSST-DESC-logo.png" alt="" /></a>
 											<div class="inner">
 												<h4>Member of the Large Synoptic Survey Telescope (LSST) Dark Energy Science Collaboration (DESC)</h4>
 												<p>Member of Supernova working group <br />
