--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/2016-08-11 21.15.38.jpg" alt="" /></span>
+					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Kara Ponder</a></h1>
 					<p>PhD Candidate<br />
                     Department of Physics and Astronomy <br />
@@ -100,14 +100,14 @@
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/pittpaccweb.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Terraformed a small moon</h4>
 												<p>these are random pictures from template.</p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/pittpaccweb.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Snapped dark matter in the wild</h4>
 												<p>That one was a good joke. .</p>
@@ -468,19 +468,19 @@
 										<span class="image fit"><img src="images/banner.jpg" alt="" /></span>
 										<div class="box alt">
 											<div class="row 50% uniform">
-												<div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
-												<div class="4u"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
-												<div class="4u"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
+												<div class="4u"><span class="image fit"><img src="images/pittpaccweb.jpg" alt="" /></span></div>
+												<div class="4u"><span class="image fit"><img src="images/pittpaccweb.jpg" alt="" /></span></div>
+												<div class="4u"><span class="image fit"><img src="images/pittpaccweb.jpg" alt="" /></span></div>
 											</div>
 											<div class="row 50% uniform">
-												<div class="4u"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
-												<div class="4u"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
-												<div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
+												<div class="4u"><span class="image fit"><img src="images/pittpaccweb.jpg" alt="" /></span></div>
+												<div class="4u"><span class="image fit"><img src="images/pittpaccweb.jpg" alt="" /></span></div>
+												<div class="4u"><span class="image fit"><img src="images/pittpaccweb.jpg" alt="" /></span></div>
 											</div>
 											<div class="row 50% uniform">
-												<div class="4u"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
-												<div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
-												<div class="4u"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
+												<div class="4u"><span class="image fit"><img src="images/pittpaccweb.jpg" alt="" /></span></div>
+												<div class="4u"><span class="image fit"><img src="images/pittpaccweb.jpg" alt="" /></span></div>
+												<div class="4u"><span class="image fit"><img src="images/pittpaccweb.jpg" alt="" /></span></div>
 											</div>
 										</div>
 										<h5>Left &amp; Right</h5>
