removed the contact me form

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 						<li><a href="#one" class="active">About</a></li>
 						<li><a href="#two">Things I Can Do</a></li>
 						<li><a href="#three">A Few Accomplishments</a></li>
-						<li><a href="#four">Contact</a></li>
-                        <li><a href="#four">what is 5?</a></li>
+						<!-- <li><a href="#four">Contact</a></li> -->
+                        <li><a href="#five">what is 5?</a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -118,7 +118,7 @@
 							</section>
 
 						<!-- Four -->
-							<section id="four">
+						<!--	<section id="four">
 								<div class="container">
 									<h3>Contact Me</h3>
 									<p> This section may be removed as you can email me via the envelope to the right ->.</p>
@@ -144,6 +144,7 @@
 									</form>
 								</div>
 							</section>
+                         -->
 
 						<!-- Five -->
 						
