--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 										 CONSTRUCTION</p>
 									</header>
 									<p> I am currently a 5th year graduate student studying dark energy through supernova cosmology. <br />
-                                     List of arXiv papers: <a href="https://arxiv.org/find/astro-ph/1/au:+Ponder_K/0/1/0/all/0/1"></a><br />
+                                     List of arXiv papers: <a href="https://arxiv.org/find/astro-ph/1/au:+Ponder_K/0/1/0/all/0/1">arXiv</a><br />
                                     
                                     Here is my <a href="Ponder_Kara_CV.pdf">CV</a>.
                                     </p>
