moved papers' link

--- a/index.html
+++ b/index.html
@@ -60,7 +60,6 @@
 										 CONSTRUCTION</p>
 									</header>
 									<p> I am currently a 5th year graduate student studying dark energy through supernova cosmology. <br />
-                                     List of arXiv papers: <a href="https://arxiv.org/find/astro-ph/1/au:+Ponder_K/0/1/0/all/0/1">arXiv</a><br />
                                     
                                     Here is my <a href="Ponder_Kara_CV.pdf">CV</a>.
                                     </p>
@@ -76,7 +75,7 @@
                                         <li class="fa-graduation-cap"> PhD and Master's of Science in Physics:  University of Pittsburgh</li>
                                         <li class="fa-graduation-cap"> Bachelor's of Science in Physics and Astronomy: University of Georgia</li>
                                         <li class="fa-code"> Coding: Python, C++, PyRAF/IRAF </li>
-										<!-- <li class="fa-cubes">Stack small boxes</li>-->
+										<li class="fa-file">List of <a href="https://arxiv.org/find/astro-ph/1/au:+Ponder_K/0/1/0/all/0/1">arXiv</a> papers.</li>
 										<!-- <li class="fa-book">Read books and stuff</li>-->
 										<!-- <li class="fa-coffee">Drink much coffee</li>-->
 										<!-- <li class="fa-bolt">Lightning bolt</li>-->
