--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						<li><a href="#two">Things I Can Do</a></li>
 						<li><a href="#three">A Few Accomplishments</a></li>
 						<!-- <li><a href="#four">Contact</a></li> -->
-                        <li><a href="#five">what is 5?</a></li>
+                        <!--<li><a href="#five">what is 5?</a></li> -->
 					</ul>
 				</nav>
 				<footer>
@@ -147,7 +147,7 @@
                          -->
 
 						<!-- Five -->
-						
+						<!--
 							<section id="five">
 								<div class="container">
 									<h3>Elements</h3>
@@ -491,6 +491,7 @@
 
 								</div>
 							</section>
+                         -->
 						
 
 					</div>
