spectra and photom

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
                                         <li class="fa-graduation-cap"> Bachelor's of Science in Physics and Astronomy: University of Georgia</li>
                                         <li class="fa-code"> Coding: Python, C++, PyRAF/IRAF </li>
 										<li class="fa-file">List of <a href="https://arxiv.org/find/astro-ph/1/au:+Ponder_K/0/1/0/all/0/1">arXiv</a> papers.</li>
-										<!-- <li class="fa-book">Read books and stuff</li>-->
-										<!-- <li class="fa-coffee">Drink much coffee</li>-->
+                                        <li class="fa-star">NIR Photometric Light curves of SNeIa</li>
+										<li class="fa-area-chart">Optical Spectroscopy of SN host galaxies</li>
 										<!-- <li class="fa-bolt">Lightning bolt</li>-->
 										<!-- <li class="fa-users">Shadow clone technique</li>-->
                                         
