--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
 									</header>
 									<p> I am currently a 5th year graduate student studying dark energy through supernova cosmology. <br />
                                     
-                                    My research goals are understanding host galaxy correlations with supernovae for cosmology. <br />
-                                    I have explored ways to improve parameter estimation with the likelihood function motivated by this correlation. <br />
-                                    I am also exploring these correlations with NIR data obtained in the SweetSpot survey. I am currently  <br />
-                                    leading the second and full data release of NIR photometric light curves for SweetSpot. I have taken IFU <br />
-                                    spectra of host galaxies and am leading that data reduction as well. I will be analyzing the resulting correlations <br />
-                                    and incorporating them into likelihood functions for cosmology.
+                                    My research goals are understanding host galaxy correlations with supernovae for cosmology.
+                                    I have explored ways to improve parameter estimation with the likelihood function motivated by this correlation.
+                                    I am also exploring these correlations with NIR data obtained in the SweetSpot survey. I am currently
+                                    leading the second and full data release of NIR photometric light curves for SweetSpot. I have taken IFU
+                                    spectra of host galaxies and am leading that data reduction as well. I will be analyzing the resulting correlations 
+                                    and incorporating them into likelihood functions for cosmology. <br />
                                     
                                     Here is my <a href="Ponder_Kara_CV.pdf">CV</a>.
                                     </p>
