added bayesian analysis

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                                     I have explored ways to improve parameter estimation with the likelihood function motivated by this correlation.
                                     I am also exploring these correlations with NIR data obtained in the SweetSpot survey. I am currently
                                     leading the second and full data release of NIR photometric light curves for SweetSpot. I have taken IFU
-                                    spectra of host galaxies and am leading that data reduction as well. I will be analyzing the resulting correlations 
+                                    spectra of host galaxies and am leading that data reduction as well. I will be analyzing the resulting correlations
                                     and incorporating them into likelihood functions for cosmology. <br />
                                     
                                     Here is my <a href="Ponder_Kara_CV.pdf">CV</a>.
@@ -85,7 +85,7 @@
 										<li class="fa-file">List of <a href="https://arxiv.org/find/astro-ph/1/au:+Ponder_K/0/1/0/all/0/1">arXiv</a> papers.</li>
                                         <li class="fa-star">NIR Photometric Light curves of SNeIa for the <a href="https://arxiv.org/abs/1310.2259">SweetSpot Survey</a> </li>
 										<li class="fa-area-chart">Optical Spectroscopy of SN host galaxies</li>
-										<!-- <li class="fa-bolt">Lightning bolt</li>-->
+										<li class="fa-sort-amount-asc">Bayesian/Hierarchical Bayesian analysis</li>-->
 										<!-- <li class="fa-users">Shadow clone technique</li>-->
                                         
 									</ul>
