--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 										<li class="fa-file">List of <a href="https://arxiv.org/find/astro-ph/1/au:+Ponder_K/0/1/0/all/0/1">arXiv</a> papers.</li>
                                         <li class="fa-star">NIR Photometric Light curves of SNeIa for the <a href="https://arxiv.org/abs/1310.2259">SweetSpot Survey</a> </li>
 										<li class="fa-area-chart">Optical Spectroscopy of SN host galaxies</li>
-										<li class="fa-sort-amount-asc">Bayesian/Hierarchical Bayesian analysis</li>-->
+										<li class="fa-sort-amount-asc">Bayesian/Hierarchical Bayesian analysis</li>
 										<!-- <li class="fa-users">Shadow clone technique</li>-->
                                         
 									</ul>
