--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 						<li><a href="#one" class="active">About</a></li>
 						<li><a href="#two">Things I Can Do</a></li>
 						<li><a href="#three">A Few Accomplishments</a></li>
-						<!-- <li><a href="#four">Contact</a></li> -->
+						<li><a href="#four">Links</a></li>
                         <!--<li><a href="#five">what is 5?</a></li> -->
 					</ul>
 				</nav>
@@ -125,7 +125,21 @@
 							</section>
 
 						<!-- Four -->
-						<!--	<section id="four">
+                        <section id="four">
+                            <div class="container">
+                                <h3>Links</h3>
+                                <p>links</p>
+                                <ul class="feature-icons">
+                                    <li class="fa-university"> <a href="http://inspirehep.net/author/profile/Kara.A.Ponder.1PhD">inSPIRE</a> </li>
+                                    <li class="fa-bar-chart"> <a href="https://www.researchgate.net/profile/Kara_Ponder">Research Gate</a></li>
+                                    <li class="fa-graduation-cap"> <a href="https://scholar.google.com/citations?user=D-PUvKoAAAAJ&hl=en">Google Scholar</a> </li>
+                                    <li class="fa-file">List of <a href="https://arxiv.org/find/astro-ph/1/au:+Ponder_K/0/1/0/all/0/1">arXiv</a> papers.</li>
+                                    <li class="fa-star"> <a href="https://arxiv.org/abs/1310.2259">SweetSpot Survey</a> </li>
+                                    
+                                </ul>
+                            </div>
+                        </section>
+                        <!--	<section id="four">
 								<div class="container">
 									<h3>Contact Me</h3>
 									<p> This section may be removed as you can email me via the envelope to the right ->.</p>
