commented out links

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 						<!-- Four -->
                         <section id="four">
                             <div class="container">
-                                <h3>Links</h3>
+                                <!-- <h3>Links</h3> -->
                                 <p>links</p>
                                 <ul class="feature-icons">
                                     <li class="fa-university"> <a href="http://inspirehep.net/author/profile/Kara.A.Ponder.1PhD">inSPIRE</a> </li>
