--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/2013-11-16 04.07.37.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Terraformed a small moon</h4>
+												<h4>Observations</h4>
 												<p>these are random pictures from template.</p>
 											</div>
 										</article>
