--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/2013-11-16_04_07_37.jpg" alt="" /></a>
+											<a href="https://www.noao.edu/kpno/" class="image"><img src="images/2013-11-16_04_07_37.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Observations</h4>
 												<p>these are random pictures from template.</p>
