added more links, observation section, SN2016 section

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 					<ul>
 						<li><a href="#one" class="active">About</a></li>
 						<li><a href="#two">Things I Can Do</a></li>
-						<li><a href="#three">A Few Accomplishments</a></li>
-						<li><a href="#four">Links</a></li>
+						<li><a href="#three">Highlights</a></li>
+						<li><a href="#four">CV and Links</a></li>
                         <!--<li><a href="#five">what is 5?</a></li> -->
 					</ul>
 				</nav>
@@ -68,7 +68,7 @@
                                     spectra of host galaxies and am leading that data reduction as well. I will be analyzing the resulting correlations
                                     and incorporating them into likelihood functions for cosmology. <br />
                                     
-                                    Here is my <a href="Ponder_Kara_CV.pdf">CV</a>.
+                                    <!-- Here is my <a href="Ponder_Kara_CV.pdf">CV</a>.-->
                                     </p>
 								</div>
 							</section>
@@ -95,8 +95,8 @@
 						<!-- Three -->
 							<section id="three">
 								<div class="container">
-									<h3>A Few Accomplishments</h3>
-									<p> summary of accomplishments.</p>
+									<h3>Highlights</h3>
+									<!-- <p> summary of accomplishments.</p> -->
 									<div class="features">
 										<article>
 											<a href="http://www.lsst-desc.org/" class="image"><img src="images/LSST-DESC-logo.png" alt="" /></a>
@@ -107,34 +107,52 @@
 											</div>
 										</article>
 										<article>
-											<a href="https://www.noao.edu/kpno/" class="image"><img src="images/2013-11-16_04_07_37.jpg" alt="" /></a>
+											<a href="http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1511.04647" class="image"><img src="20150609_PDF_residual_LCDM.pdf" alt="" /></a>
 											<div class="inner">
-												<h4>Observations</h4>
+                                                <h4>Incorporating Astrophysical Systematics into a Generalized Likelihood for Cosmology with Type Ia Supernovae</h4>
 												<p>these are random pictures from template.</p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<a href="https://www.noao.edu/kpno/" class="image"><img src="images/2013-11-16_04_07_37.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Snapped dark matter in the wild</h4>
-												<p>That one was a good joke. .</p>
+												<h4>Observations</h4>
+												<p> Majority of my observations have been carried out on Kitt Peak in Arizona. <br />
+                                                SweetSpot survey was conducted on the <a href="http://www.wiyn.org/"> WIYN 3.5 m</a> using the <a href="http://www.noao.edu/kpno/manuals/whirc/WHIRC.html">WIYN High-resolution InfraRed Camera (WHIRC)</a>. A near-infrared
+                                                photometric imaging camera with JHKs broadband filters. <br />
+                                                SweetSpot also utilized <a href="http://www.astro.wisc.edu/~mab/research/hexpak_gradpak/">HexPak</a>, a hexagonal shaped integral field unit
+                                                mounted on the WIYN bench spectrograph. <br />
+                                                For <a href="https://arxiv.org/abs/1408.5970"> SDSS III Reverberation Mapping project</a>, I also used the Bok 2.3 m run by the Steward Observatory on Kitt Peak.<br />
+                                                I have also worked on the <a href="http://obs.carnegiescience.edu/MagellanMagellan"> Magellan Telescopes</a> using Low Dispersion Survey Spectrograph 3 (LDSS-3): Slit spectrograph in Optical and Folded-port InfraRed Echellette (FIRE): Echelle mode NIR spectrograph.
+                                                </p>
 											</div>
 										</article>
-									</div>
+                                        <article>
+                                            <a href="http://sn2016.cl/program" class="image"><img src="IMG_3471_SAT-13TH_K.-PONDER_TALK.jpg" alt="" /></a>
+                                            <div class="inner">
+                                                <h4>Supernova Through the Ages: Understanding the Past to Prepare for the Future</h4>
+                                                <p>In August 2016, I gave a contributed talk at a large supernova conference. A copy of my talk can be found at the link associated with the picture. (Possible video link to follow.)</p>
+                                            </div>
+                                        </article>
+                                    </div>
 								</div>
 							</section>
 
 						<!-- Four -->
                         <section id="four">
                             <div class="container">
-                                <!-- <h3>Links</h3> -->
-                                <p>links</p>
+                                <h3>CV and Links</h3>
+                                <!-- <p>links</p> -->
                                 <ul class="feature-icons">
+                                     <li class="fa-star"> <a href="Ponder_Kara_CV.pdf">CV</a> </li>
+                                     <li class="fa-file">List of <a href="https://arxiv.org/find/astro-ph/1/au:+Ponder_K/0/1/0/all/0/1">arXiv</a> papers.</li>
                                     <li class="fa-university"> <a href="http://inspirehep.net/author/profile/Kara.A.Ponder.1PhD">inSPIRE</a> </li>
                                     <li class="fa-bar-chart"> <a href="https://www.researchgate.net/profile/Kara_Ponder">Research Gate</a></li>
                                     <li class="fa-graduation-cap"> <a href="https://scholar.google.com/citations?user=D-PUvKoAAAAJ&hl=en">Google Scholar</a> </li>
-                                    <li class="fa-file">List of <a href="https://arxiv.org/find/astro-ph/1/au:+Ponder_K/0/1/0/all/0/1">arXiv</a> papers.</li>
                                     <li class="fa-star"> <a href="https://arxiv.org/abs/1310.2259">SweetSpot Survey</a> </li>
+                                    <li class="fa-star"> <a href="http://www.physicsandastronomy.pitt.edu/pittpacc">Pitt PACC</a> </li>
+                                    <li class="fa-star"> <a href="https://www.lsst.org/">Large Synoptic Survey Telescope</a> </li>
+                                    <li class="fa-star"> <a href="https://www.sdss3.org/future/">Sloan Digital Sky Survey 4</a> </li>
                                     
                                 </ul>
                             </div>
