text for GMM plot

--- a/index.html
+++ b/index.html
@@ -110,7 +110,12 @@
 											<a href="http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1511.04647" class="image"><img src="20150609_PDF_residual_LCDM.pdf" alt="" /></a>
 											<div class="inner">
                                                 <h4>Incorporating Astrophysical Systematics into a Generalized Likelihood for Cosmology with Type Ia Supernovae</h4>
-												<p>these are random pictures from template.</p>
+												<p>This plot, referred to by the authors as a "Butterfly" plot, illustrates a toy model looking at the distributions of supernovae.
+                                                We built a framework to model systematics with a non-Gaussian likelihood that can remove bias with minimal precision losses.
+                                                To the left, we showed what the (toy model) distributions of supernovae that were modeled looked like at different redshifts.
+                                                <br />
+                                                This paper is published in the
+                                                The Astrophysical Journal, Volume 825, Issue 1, article id. 35, 13 pp. (2016)</p>
 											</div>
 										</article>
 										<article>
