--- a/index.html
+++ b/index.html
@@ -122,12 +122,11 @@
 											<a href="https://www.noao.edu/kpno/" class="image"><img src="images/2013-11-16_04_07_37.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Observations</h4>
-												<p> Majority of my observations have been carried out on Kitt Peak in Arizona. <br />
-                                                SweetSpot survey was conducted on the <a href="http://www.wiyn.org/"> WIYN 3.5 m</a> using the <a href="http://www.noao.edu/kpno/manuals/whirc/WHIRC.html">WIYN High-resolution InfraRed Camera (WHIRC)</a>. A near-infrared
-                                                photometric imaging camera with JHKs broadband filters. <br />
+												<p> <!--Majority of my observations have been carried out on Kitt Peak in Arizona.<br />-->
+                                                SweetSpot survey was conducted on the <a href="http://www.wiyn.org/"> WIYN 3.5 m</a> using the <a href="http://www.noao.edu/kpno/manuals/whirc/WHIRC.html">WIYN High-resolution InfraRed Camera (WHIRC)</a>. <br />
                                                 SweetSpot also utilized <a href="http://www.astro.wisc.edu/~mab/research/hexpak_gradpak/">HexPak</a>, a hexagonal shaped integral field unit
                                                 mounted on the WIYN bench spectrograph. <br />
-                                                For <a href="https://arxiv.org/abs/1408.5970"> SDSS III Reverberation Mapping project</a>, I also used the Bok 2.3 m run by the Steward Observatory on Kitt Peak.<br />
+                                                For <a href="https://arxiv.org/abs/1408.5970"> SDSS III Reverberation Mapping project</a>, I operated the Bok 2.3 m run by the Steward Observatory on Kitt Peak.<br />
                                                 I have also worked on the <a href="http://obs.carnegiescience.edu/MagellanMagellan"> Magellan Telescopes</a> using Low Dispersion Survey Spectrograph 3 (LDSS-3): Slit spectrograph in Optical and Folded-port InfraRed Echellette (FIRE): Echelle mode NIR spectrograph.
                                                 </p>
 											</div>
@@ -154,7 +153,7 @@
                                     <li class="fa-university"> <a href="http://inspirehep.net/author/profile/Kara.A.Ponder.1PhD">inSPIRE</a> </li>
                                     <li class="fa-bar-chart"> <a href="https://www.researchgate.net/profile/Kara_Ponder">Research Gate</a></li>
                                     <li class="fa-graduation-cap"> <a href="https://scholar.google.com/citations?user=D-PUvKoAAAAJ&hl=en">Google Scholar</a> </li>
-                                    <li class="fa-star"> <a href="https://arxiv.org/abs/1310.2259">SweetSpot Survey</a> </li> <br />
+                                    <li class="fa-star"> <a href="https://arxiv.org/abs/1310.2259">SweetSpot Survey</a> </li> <br /><br />
                                     <li class="fa-star"> <a href="http://www.physicsandastronomy.pitt.edu/pittpacc">Pitt PACC</a> </li>
                                     <li class="fa-star"> <a href="https://www.lsst.org/">Large Synoptic Survey Telescope</a> </li>
                                     <li class="fa-star"> <a href="https://www.sdss3.org/future/">Sloan Digital Sky Survey 4</a> </li>
