--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="#one" class="active">About</a></li>
-						<li><a href="#two">Things I Can Do</a></li>
+						<li><a href="#two">Experience</a></li>
 						<li><a href="#three">Highlights</a></li>
 						<li><a href="#four">CV and Links</a></li>
                         <!--<li><a href="#five">what is 5?</a></li> -->
@@ -77,7 +77,7 @@
 							<section id="two">
 								<div class="container">
 									<h3>Experience</h3>
-									<p>any experience summary text</p>
+									<!-- <p>any experience summary text</p> -->
 									<ul class="feature-icons">
                                         <li class="fa-graduation-cap"> PhD and Master's of Science in Physics:  University of Pittsburgh</li>
                                         <li class="fa-graduation-cap"> Bachelor's of Science in Physics and Astronomy: University of Georgia</li>
