right directory for images

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 											</div>
 										</article>
 										<article>
-											<a href="http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1511.04647" class="image"><img src="20150609_PDF_residual_LCDM.pdf" alt="" /></a>
+											<a href="http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1511.04647" class="image"><img src="images/20150609_PDF_residual_LCDM.pdf" alt="" /></a>
 											<div class="inner">
                                                 <h4>Incorporating Astrophysical Systematics into a Generalized Likelihood for Cosmology with Type Ia Supernovae</h4>
 												<p>This plot, referred to by the authors as a "Butterfly" plot, illustrates a toy model looking at the distributions of supernovae.
@@ -132,7 +132,7 @@
 											</div>
 										</article>
                                         <article>
-                                            <a href="http://sn2016.cl/program" class="image"><img src="IMG_3471_SAT-13TH_K.-PONDER_TALK.jpg" alt="" /></a>
+                                            <a href="http://sn2016.cl/program" class="image"><img src="images/IMG_3471_SAT-13TH_K.-PONDER_TALK.jp2" alt="" /></a>
                                             <div class="inner">
                                                 <h4>Supernova Through the Ages: Understanding the Past to Prepare for the Future</h4>
                                                 <p>In August 2016, I gave a contributed talk at a large supernova conference. A copy of my talk can be found at the link associated with the picture. (Possible video link to follow.)</p>
