--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 											</div>
 										</article>
                                         <article>
-                                            <a href="http://sn2016.cl/program" class="image"><img src="images/IMG_3471_SAT-13TH_K-PONDER_TALK.jp2" alt="" /></a>
+                                            <a href="http://sn2016.cl/program" class="image"><img src="images/IMG_3471_SAT-13TH_K-PONDER_TALK.jpg" alt="" /></a>
                                             <div class="inner">
                                                 <h4>Supernova Through the Ages: Understanding the Past to Prepare for the Future</h4>
                                                 <p>In August 2016, I gave a contributed talk at a large supernova conference. A copy of my talk can be found at the link associated with the picture. (Possible video link to follow.)</p>
