plot from paper

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 											</div>
 										</article>
 										<article>
-											<a href="http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1511.04647" class="image"><img src="images/20150609_PDF_residual_LCDM.pdf" alt="" /></a>
+											<a href="http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1511.04647" class="image"><img src="images/20150609_PDF_residual_LCDM.jpg" alt="" /></a>
 											<div class="inner">
                                                 <h4>Incorporating Astrophysical Systematics into a Generalized Likelihood for Cosmology with Type Ia Supernovae</h4>
 												<p>This plot, referred to by the authors as a "Butterfly" plot, illustrates a toy model looking at the distributions of supernovae.
