--- a/index.html
+++ b/index.html
@@ -152,11 +152,19 @@
                                      <li class="fa-file">List of <a href="https://arxiv.org/find/astro-ph/1/au:+Ponder_K/0/1/0/all/0/1">arXiv</a> papers.</li>
                                     <li class="fa-university"> <a href="http://inspirehep.net/author/profile/Kara.A.Ponder.1PhD">inSPIRE</a> </li>
                                     <li class="fa-bar-chart"> <a href="https://www.researchgate.net/profile/Kara_Ponder">Research Gate</a></li>
-                                    <li class="fa-graduation-cap"> <a href="https://scholar.google.com/citations?user=D-PUvKoAAAAJ&hl=en">Google Scholar</a> </li> <br /><br />
+                                    <li class="fa-graduation-cap"> <a href="https://scholar.google.com/citations?user=D-PUvKoAAAAJ&hl=en">Google Scholar</a> </li>
+                                    <li class="icon fa-linkedin"> <a href="https://www.linkedin.com/in/kara-ponder-2635749b" >LinkedIn</a></li>
+                                    <li  class="icon fa-github"><a href="https://github.com/kponder" >GitHub</a></li>
+                                    <br /><br />
+                                    Institution:
+                                    <li class="image"><img src="images/pittpaccweb.jpg" alt="" /> <a href="http://www.physicsandastronomy.pitt.edu/pittpacc">Pitt PACC</a> </li>
+                                    <br /><br />
+                                    Collaborations and Surveys:
                                     <li class="fa-star"> <a href="https://arxiv.org/abs/1310.2259">SweetSpot Survey</a> </li>
-                                    <li class="fa-star"> <a href="http://www.physicsandastronomy.pitt.edu/pittpacc">Pitt PACC</a> </li>
                                     <li class="fa-star"> <a href="https://www.lsst.org/">Large Synoptic Survey Telescope</a> </li>
-                                    <li class="fa-star"> <a href="https://www.sdss3.org/future/">Sloan Digital Sky Survey 4</a> </li>
+                                    <li class="fa-star"> <a href="https://www.sdss3.org/future/">Sloan Digital Sky Survey 4</a> and <a href="http://www.sdss.org/surveys/manga/">MaNGA</a> </li>
+                                    <li class="fa-star"> <a href="http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1511.01495"> All-weather MUse Supernova Integral field Nearby Galaxies(AMUSING) survey </a> </li>
+                                    
                                     
                                 </ul>
                             </div>
