--- a/index.html
+++ b/index.html
@@ -156,10 +156,11 @@
                                     <li class="icon fa-linkedin"> <a href="https://www.linkedin.com/in/kara-ponder-2635749b" >LinkedIn</a></li>
                                     <li  class="icon fa-github"><a href="https://github.com/kponder" >GitHub</a></li>
                                     <br /><br />
-                                    Institution:
-                                    <li class="image"><img src="images/pittpaccweb.jpg" alt="" /> <a href="http://www.physicsandastronomy.pitt.edu/pittpacc">Pitt PACC</a> </li>
+                                    Institution:<br />
+                                    <li><a href="#" class="button alt fit small"><img src="images/pittpaccweb.jpg" alt="" /></a></li>
+                                    <!-- <li class="image"><img src="images/pittpaccweb.jpg" alt="" /> <a href="http://www.physicsandastronomy.pitt.edu/pittpacc">Pitt PACC</a> </li>-->
                                     <br /><br />
-                                    Collaborations and Surveys:
+                                    Collaborations and Surveys:<br />
                                     <li class="fa-star"> <a href="https://arxiv.org/abs/1310.2259">SweetSpot Survey</a> </li>
                                     <li class="fa-star"> <a href="https://www.lsst.org/">Large Synoptic Survey Telescope</a> </li>
                                     <li class="fa-star"> <a href="https://www.sdss3.org/future/">Sloan Digital Sky Survey 4</a> and <a href="http://www.sdss.org/surveys/manga/">MaNGA</a> </li>
