no pitt pacc button

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 									<ul class="feature-icons">
                                         <li class="fa-graduation-cap"> PhD and Master's of Science in Physics:  University of Pittsburgh</li>
                                         <li class="fa-graduation-cap"> Bachelor's of Science in Physics and Astronomy: University of Georgia</li>
-                                        <li class="fa-code"> Coding: Python, C++, PyRAF/IRAF </li>
+                                        <li class="fa-code"> Coding: Python, C++, PyRAF/IRAF, emcee, AstroPy </li>
 										<!--<li class="fa-file">List of <a href="https://arxiv.org/find/astro-ph/1/au:+Ponder_K/0/1/0/all/0/1">arXiv</a> papers.</li>-->
                                         <li class="fa-star">NIR Photometric Light curves of SNeIa for the <a href="https://arxiv.org/abs/1310.2259">SweetSpot Survey</a> </li>
 										<li class="fa-area-chart">Optical Spectroscopy of SN host galaxies</li>
@@ -157,8 +157,7 @@
                                     <li  class="icon fa-github"><a href="https://github.com/kponder" >GitHub</a></li>
                                     <br /><br />
                                     Institution:<br />
-                                    <li><a href="#" class="button alt fit small"><img src="images/pittpaccweb.jpg" alt="" /></a></li>
-                                    <!-- <li class="image"><img src="images/pittpaccweb.jpg" alt="" /> <a href="http://www.physicsandastronomy.pitt.edu/pittpacc">Pitt PACC</a> </li>-->
+                                    <li class="fa-star"> <a href="http://www.physicsandastronomy.pitt.edu/pittpacc">Pitt PACC</a> </li>
                                     <br /><br />
                                     Collaborations and Surveys:<br />
                                     <li class="fa-star"> <a href="https://arxiv.org/abs/1310.2259">SweetSpot Survey</a> </li>
