--- a/index.html
+++ b/index.html
@@ -156,14 +156,15 @@
                                     <li class="icon fa-linkedin"> <a href="https://www.linkedin.com/in/kara-ponder-2635749b" >LinkedIn</a></li>
                                     <li  class="icon fa-github"><a href="https://github.com/kponder" >GitHub</a></li>
                                     <br /><br />
-                                    Institution:<br />
-                                    <li class="fa-star"> <a href="http://www.physicsandastronomy.pitt.edu/pittpacc">Pitt PACC</a> </li>
+                                    Affiliations:<br />
+                                    <li class="fa-university"> <a href="http://www.physicsandastronomy.pitt.edu/">University of Pittsburgh</a> </li>
+                                    <li class="fa-star"> <a href="http://www.physicsandastronomy.pitt.edu/pittpacc">Pittsburgh Particle, Astrophysics, and Cosmology Center (Pitt PACC)</a> </li>
                                     <br /><br />
                                     Collaborations and Surveys:<br />
                                     <li class="fa-star"> <a href="https://arxiv.org/abs/1310.2259">SweetSpot Survey</a> </li>
-                                    <li class="fa-star"> <a href="https://www.lsst.org/">Large Synoptic Survey Telescope</a> </li>
+                                    <li class="fa-star"> <a href="https://www.lsst.org/">Large Synoptic Survey Telescope</a> <a href="http://www.lsst-desc.org/"> Dark Energy Science Collaboration</a>  </li>
                                     <li class="fa-star"> <a href="https://www.sdss3.org/future/">Sloan Digital Sky Survey 4</a> and <a href="http://www.sdss.org/surveys/manga/">MaNGA</a> </li>
-                                    <li class="fa-star"> <a href="http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1511.01495"> All-weather MUse Supernova Integral field Nearby Galaxies(AMUSING) survey </a> </li>
+                                    <li class="fa-star"> <a href="http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1511.01495"> All-weather MUse Supernova Integral field Nearby Galaxies (AMUSING) survey </a> </li>
                                     
                                     
                                 </ul>
